<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulaperez.formulario.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/etUser"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/holo_purple"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pass"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/etPass"
                android:inputType="numberPassword"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/holo_purple" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/passC"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/etPassC"
                android:inputType="numberPassword"

                android:backgroundTint="@android:color/holo_purple" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/email"
                android:textAlignment="center" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/holo_purple"
                android:id="@+id/etEmail"

                />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/genre"
                android:textSize="18dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"

                />



            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="@string/mas"
                    android:buttonTint="@android:color/holo_purple"/>


                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/fem"
                    android:buttonTint="@android:color/holo_purple"/>
            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="2"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/etBirthName"
                android:textSize="18dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/holo_purple"
                android:enabled="false"
                />

            <Button
                android:id="@+id/btBirth"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:background="@drawable/ic_date_range_black_24dp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/birthPlace"
                android:layout_weight="1"
                android:textSize="18dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerBP"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hobbies"
                android:textSize="18dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="vertical"
                >

                <CheckBox
                    android:id="@+id/cbHobbies1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/gtCinema"
                    android:layout_weight="1"
                    />

                <CheckBox
                    android:id="@+id/cbHobbies2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/gtEat"/>

                <CheckBox
                    android:id="@+id/cbHobbies3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pSport"/>

                <CheckBox
                    android:id="@+id/cbHobbies4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/nAbove"/>/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btLogin"

            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Login"
            android:textAlignment="center"
            android:background="#FF73309F"
            android:textColor="@android:color/white" />






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_results_tv"/>

    </LinearLayout>




</ScrollView>
